Fix: docker-compose->docker
docker-compose 없이 실행하도록 설정